# Rainfall-Erosivity-Estimation

./: LICENSE  R factor Computation.ipynb  README.md  Rainfall_erosivity.ipynb  Rainfall_erosivity_rusle2.ipynb  erosive_storms.py  erosivity_estimation.ipynb  identify_storms.py  max_30_min_rainfall.py  monthly_erosivity.py  process_intervals.py  publish_version.ipynb  rainfall_energy.py  rainfall_erosivity.py  separate_storm_events.py
.github/workflows/: draft-pdf.yml
1994/: ACME_199405.csv  ACME_199411.csv
Rain_Data_High_Quality/ACME/1994/: ACME_199401.csv  ACME_199403.csv  ACME_199406.csv  ACME_199408.csv
Rain_Data_High_Quality/ACME/1995/: ACME_199501.csv  ACME_199503.csv  ACME_199505.csv  ACME_199506.csv  ACME_199507.csv  ACME_199510.csv
Rain_Data_High_Quality/ADAX/1994/: ADAX_199402.csv  ADAX_199403.csv  ADAX_199404.csv  ADAX_199406.csv  ADAX_199407.csv  ADAX_199408.csv  ADAX_199409.csv  ADAX_199412.csv
Rain_Data_High_Quality/ADAX/1995/: ADAX_199501.csv  ADAX_199505.csv  ADAX_199506.csv  ADAX_199507.csv  ADAX_199510.csv
code/: erosive_storms.py  filter_high_quality_sites.py  rainfall_energy.py  separate_storm_events.py
example/ACME/1994/: ACME_199402.csv  ACME_199404.csv  ACME_199407.csv  ACME_199409.csv  ACME_199410.csv  ACME_199412.csv
example/ACME/1995/: ACME_199502.csv  ACME_199504.csv  (+4 more)
paper/: paper.bib  paper.md
rainfalltools/: README.md  pyproject.toml
rainfalltools/src/rainfalltools/: __init__.py  erosive_storms.py  filter_high_quality_sites.py  identify_storms.py  process_intervals.py  rainfall_erosivity.py  separate_storm_events.py
(+11 files in other folders)
