[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rainfalltools"
version = "0.1.0"
description = "Tools for rainfall data processing and erosivity analysis"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
    "pandas>=1.3",
    "numpy>=1.20"
]
keywords = ["rainfall", "erosivity", "hydrology", "mesonet"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://example.com/rainfalltools"
Repository = "https://example.com/rainfalltools"
